# OS_Filesystem

./: .gitignore  CMakeLists.txt  Filing.c  README.md  Separator.c  data_blocks  file.txt  inode  inode.c  inode.h  newfile.txt  test.txt
builds/: main
include/: block.h  data_blocks.h  file.h  globals.h  inode.h  inodes.h  olt.h  superblock.h
lib/: block.c  blocks.c  data_block.c  data_blocks  data_blocks.c  dentry.c  indirect_nodes.c  inode.c  inodes.c  olt.c  superblock.c
src/: main.c  test.c
